Kubernetes Clustering Base

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,7 +1,7 @@
 MASTER_HOST: 10.131.5.249
-MASTER_HOST_PUB: 178.62.49.12
+MASTER_HOST_PUB: 46.101.34.52
 
-ETCD_ENDPOINTS: http://10.131.5.249:2379
+ETCD_ENDPOINTS: http://{{ MASTER_HOST }}:2379
 
 POD_NETWORK: 10.2.0.0/16
 SERVICE_IP_RANGE: 10.3.0.0/24
