--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,5 +1,5 @@
-MASTER_HOST: -
-MASTER_HOST_PUB: -
+MASTER_HOST: 10.131.18.163
+MASTER_HOST_PUB: 139.59.166.128
 
 ETCD_ENDPOINTS: http://{{ MASTER_HOST }}:2379
 
